# dist/openapi.yaml
@@ -28,14 +28,16 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/userRegister'
         required: true
       responses:
         "201":
           description: A new user has been added
         "400":
           description: wrong input parameters
-  /login:
+        "409":
+          description: Username was taken
+  /Login:
     post:
       tags:
       - Auth
@@ -45,7 +47,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/LoginScheme'
+              $ref: '#/components/schemas/userLogin'
         required: true
       responses:
         "200":
@@ -109,6 +111,102 @@ paths:
           description: user is not authorized
       security:
       - cookieAuth: []
+  /users/lastWatchedRecipes:
+    get:
+      tags:
+      - Users
+      summary: Returns the last 3 recipes that the user has watched
+      description: Get an array of 3 watched recipes by logged in user
+      responses:
+        "200":
+          description: data about 3 recipes that the user watched
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/RecipePreview'
+        "401":
+          description: user is not authorized
+      security:
+      - cookieAuth: []
+  /users/watched:
+    post:
+      tags:
+      - Users
+      summary: Mark a recipe as watched by a user
+      description: Mark a recipe as watched by a user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                reciepe_id:
+                  type: string
+                  description: Id of a reciepe that watched by a user 
+                  example: 715538
+      responses:
+        "200":
+          description: The recipe has been successfully saved as watched
+        "400":
+          description: Recipe ID is missing
+      security:
+      - cookieAuth: []
+  /users/createARecipe:
+    post:
+      tags:
+      - Users
+      summary: Create a new by a user
+      description: Create a new by a user
+      requestBody:
+        description: Item to add
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/createARecipe'
+        required: true
+      responses:
+        "200":
+          description: Your recipe has been successfully created!
+        "400":
+          description: Invalid recipe supplied
+  /users/userRecipes:
+    get:
+      tags:
+      - Users
+      summary: Returns all the user's recipes that he created 
+      description: Get a JSON object that includes all the user's recipes
+      responses:
+        "200":
+          description: data about the user's recipes
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/MyRecipePreview'
+      security:
+      - cookieAuth: []
+  /users/myFamilyRecipes:
+    get:
+      tags:
+      - Users
+      summary: Returns all the user's family recipes 
+      description: Get a JSON object that includes all the user's family recipes
+      responses:
+        "200":
+          description: data about the user's family recipes
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/RecipePreview'
+        "401":
+          description: user is not authorized
+      security:
+      - cookieAuth: []            
   /recipes/{recipeId}:
     get:
       tags:
@@ -126,16 +224,75 @@ paths:
           type: integer
       responses:
         "200":
-          description: data about the recipe
+          description: Successfully get the data about the recipe
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/RecipePreview'
         "404":
           description: recipeId is not exists
+  /recipes/random:
+    get:
+      tags:
+      - Recipes
+      summary: Return the details of 3 random recipes
+      description: Get a JSON object that includes all details of 3 random recipes
+      responses:
+        "200":
+          description: Successfully returned 3 random recipes
+        "400":
+          description: Wrong input 
+  /recipes/search/{query}/{number}/{cuisine}/{diet}/{intolerance}:
+    get:
+      tags:
+      - Recipes
+      summary: Search a recipe by query
+      description: Returns recipes based on the provided query and parameters
+      operationId: searchRecipesByQuery
+      parameters:
+      - name: query
+        in: path
+        description: Query to search with
+        required: true
+        schema:
+          type: string
+          example: pasta
+      - name: number
+        in: path
+        description: Number of recipes to return
+        required: true
+        schema:
+          type: integer
+          example: 10
+      - name: cuisine
+        in: path
+        description: Type of cuisine to search for
+        required: true
+        schema:
+          type: string
+          example: Italian
+      - name: diet
+        in: path
+        description: Type of diet to search for
+        required: true
+        schema:
+          type: string
+          example: Vegetarian
+      - name: intolerance
+        in: path
+        description: Type of intolerance to search for
+        required: true
+        schema:
+          type: string
+          example: Gluten
+      responses:
+        "200":
+          description: Successfully returned Recipes by the query
+        "404":
+          description: We couldn't find any results matching your search 
 components:
-  schemas:
-    User:
+  schemas:  MyRecipePreview
+    userRegister:
       type: object
       properties:
         username:
@@ -175,7 +332,7 @@ components:
         #   description: URL for the user's image
         #   example: https://cloudinary.com/
       description: Model containing user info
-    LoginScheme:
+    userLogin:
       type: object
       properties:
         username:
@@ -191,6 +348,52 @@ components:
       example:
         username: my_name
         password: my_name@12
+      createARecipe:
+        required:
+          - title
+          - imageUrl
+        type: object
+        properties:
+          title:
+            minLength: 3
+            type: string
+            description: Recipe name
+            example: What to make for dinner tonight?? Bruschetta Style Pork & Pasta
+          imageUrl:
+            type: string
+            description: URL of the recipe image
+            format: URL
+            example: https://spoonacular.com/recipeImages/715538-312x231.jpg
+          readyInMinutes:
+            type: integer
+            description: Time required to prepare the recipe in minutes
+            format: date-time
+          popularity:
+            type: integer
+            description: Recipe popularity (number of likes)
+          vegan:
+            type: integer
+            description: Indicates if the recipe is vegan (0 for no, 1 for yes)
+          vegetarian:
+            type: integer
+            description: Indicates if the recipe is vegetarian (0 for no, 1 for yes)
+          gluten_free:
+            type: integer
+            description: Indicates if the recipe is gluten-free (0 for no, 1 for yes)
+          ingredients:
+            minItems: 1
+            type: array
+            description: List of ingredients for the recipe
+            items:
+              type: string
+          instructions:
+            type: string
+            description: Preparation instructions for the recipe
+          servings:
+            type: integer
+            description: Number of servings the recipe yields
+            format: int32
+        description: Model containing recipe information
     RecipePreview:
       type: object
       properties:
@@ -227,4 +430,3 @@ components:
           type: boolean
           description: indication if the recipe is gluten free
           example: false
-  
